# OJ-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  login.html  pyproject.toml  requirements.txt  signup.html  temp.py
.github/workflows/: docker-image.yml  static.yml
Backend/OJ/: settings.py  urls.py
Frontend/templates/: contests.html  home.html  leaderboard.html  login.html  problems.html  signup.html
OJ/: README.md  pyproject.toml
OJ/oj/: Dockerfile  db.sqlite3
OJ/oj/auth/: urls.py  views.py
OJ/oj/compiler/: urls.py
OJ/oj/contests/: urls.py  views.py
OJ/oj/core/: admin.py  models.py  urls.py  views.py
OJ/oj/oj/: settings.py  urls.py
OJ/oj/user_auth/: models.py
compiler_service/: .dockerignore  Dockerfile  requirements.txt
compiler_service/compiler/: execution.py  urls.py  views.py
compiler_service/compiler_service/: asgi.py  settings.py  urls.py  wsgi.py
oj/: .env  Dockerfile  db.sqlite3  manage.py  render.yaml  requirements.txt
oj/codes/: c26a1499-62d8-4091-b136-f24c23b1ae5e.py  f4295ae5-3101-496a-a5a6-19961c98e424.py
oj/compiler/: evaluation.py  execution.py  urls.py  utils.py  views.py
oj/compiler/codes/: 01baa460-ba66-4865-8b9d-83b31066479c.py  2169d8ba-37b8-4951-81ab-2e7fd3be9a08.py  (+7 more)
oj/contests/: models.py  urls.py  views.py
oj/core/: admin.py  models.py  urls.py  views.py
oj/oj/: settings.py  urls.py
oj/static/: style.css
oj/staticfiles/: staticfiles.json  style.35bd3158b646.css
oj/templates/: base.html  navbar.html
oj/user_auth/: models.py  tests.py  urls.py  views.py
(+89 files in other folders)
