[project]
name = "oj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "dotenv>=0.9.9",
    "google-genai>=1.27.0",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "psycopg>=3.2.9",
    "psycopg2>=2.9.10",
    "whitenoise>=6.9.0",
]
