[project]
name = "oj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url",
    "django",
    "python-dotenv",
    "google-genai",
    "gunicorn",
    "markdown",
    "psycopg",
    "psycopg2-binary",
    "whitenoise",
]
